src/test/deca/codegen/valid/expr/test_calc_unaire_float.deca
// Description:
//   test print unaire int
//
// Resultats:
//   -3.0 en Hexa
//
// Historique:
//  Cree le 15/01/2024
{
    float a = -1.0 - 4.0;
    a = -3.0;
    printx(a);
}