src/test/deca/codegen/invalid/arithmetic_overflow.deca
// // Description:
// //    Depassement de capacité opérations arithmétiques sur float
// //
// // Resultats:
// //    Error: Overflow during float arithmetic operation or Float division by zero
// //
// // Historique:
// //    cree le 15/01/2024
{
    float a =((((((100000000.0 /0.000001)/0.00000001)/0.000001)/0.00000001)/0.000000000000000000000001)/0.00000000000000000000001)/0.0000000000000000001;
    print(a);
}